--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -31,6 +31,13 @@ body {
 ol, ul {
 	list-style: none;
 }
+button, a{
+	cursor: pointer;
+	border: none;
+}
+a{
+	text-decoration: none;
+}
 blockquote, q {
 	quotes: none;
 }
