--- a/src/scss/default-theme.scss
+++ b/src/scss/default-theme.scss
@@ -54,7 +54,7 @@
                 margin-top: 15%;
                 display: flex;
                 flex-direction: column;
-                >.subtitle-login{
+                >.login-email-subtitle{
                     font-size: 1.5em;
                     margin-bottom: 6.5%;
                 }
@@ -72,7 +72,7 @@
                 margin-top: 15%;
                 display: flex;
                 flex-direction: column;
-                >.subtitle-login{
+                >.login-password-subtitle{
                     font-size: 1.5em;
                     margin-bottom: 6.5%;
                 }
@@ -118,7 +118,6 @@
                             width: 150px;
                             height: 45px;//Arrumar pelo padding
                             padding: 0 0;
-                            margin-top: 45px;
                             border-radius: 40px;
                             outline: none !important;
                             border: none;
@@ -138,7 +137,7 @@
                         width: 150px;
                         height: 45px;//Arrumar pelo padding
                         padding: 0 0;
-                        margin-top: 45px;
+                        margin-top: 20px;
                         border-radius: 40px;
                         outline: none !important;
                         border: none;
@@ -150,7 +149,7 @@
                         transition: all 0.3s ease 0s;
                         &:hover {
                             width: 225px;
-                            background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                            background: linear-gradient(to left, rgba(125, 84, 158, 0.8),rgb(195, 124, 228));
                     }
                 }
 
@@ -240,11 +239,30 @@
                     border-bottom: 2px solid #dbdbdb;
                 }
             }
+            >.cadastro-password-confirm{
+                width: 80%;
+                margin-top: 10%;
+                display: flex;
+                flex-direction: column;
+                >.subtitle-login{
+                    font-size: 1.5em;
+                    margin-bottom: 6.5%;
+                }
+                >.input{
+                    border: none;
+                    color: #ccc;
+                    width: 100%;
+                    height: 25px;
+                    font-size: 20px;
+                    border-bottom: 2px solid #dbdbdb;
+                }
+            }
             >.cadastro-wrapper-btn{
                 width: 95%;
                 display: flex;
                 justify-content: space-between;
-
+                >a{
+                                                                                                    
                     >.btn-login{
                         width: 150px;
                         height: 45px;
@@ -264,6 +282,7 @@
                             background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
                         }
                     }
+                }
                     >.btn-cadastro{
                         width: 150px;
                         height: 45px;
@@ -283,9 +302,7 @@
                             background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
                         }
                     }
-                    // >a{
-                                                                                                    
-                    // }
+                    
                 }           
         }
     }
@@ -407,6 +424,163 @@
                 
             }
             
+        }
+    }
+
+}
+
+.body-login-gym{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    font-family: 'Poppins', sans-serif;
+    >.login-leftside{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        >.login-img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        &::before {
+            content: ' ';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient( to bottom, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+        }
+    }
+    >.login-rightside{
+        width: 65%;
+        height: 100%;
+        z-index: 2;
+        background-color: $white;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        border-radius: 2px;
+        >.login-card{
+            width: 75%;
+            height: 100%;
+            margin-top: 65px;
+            margin-left: 55px;
+            margin-bottom: 40px;
+            // align-content: center;
+            // justify-content: center;
+            >.login-title{
+                font-size: 2.5em;
+                line-height: 1.5;
+                color: #333;
+                font-weight: 700;
+            }
+            >.login-email{
+                width: 80%;
+                margin-top: 15%;
+                display: flex;
+                flex-direction: column;
+                >.subtitle-login{
+                    font-size: 1.5em;
+                    margin-bottom: 6.5%;
+                }
+                >.input{
+                    border: none;
+                    color: #ccc;
+                    width: 100%;
+                    height: 25px;
+                    font-size: 20px;
+                    border-bottom: 2px solid #dbdbdb;
+                }
+            }
+            >.login-password{
+                width: 80%;
+                margin-top: 15%;
+                display: flex;
+                flex-direction: column;
+                >.subtitle-login{
+                    font-size: 1.5em;
+                    margin-bottom: 6.5%;
+                }
+                >.input{
+                    border: none;
+                    color: #ccc;
+                    width: 100%;
+                    height: 25px;
+                    font-size: 20px;
+                    border-bottom: 2px solid #dbdbdb;
+                }
+                >.forgot-password-login{
+                    align-self: flex-end;
+                    font-size: .9em;
+                    margin-top: 2.5%;
+                }
+            }
+            >.login-wrapper-btn{
+                width: 95%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                    >.btn-login{
+                        width: 150px;
+                        height: 45px;
+                        padding: 0 25px;
+                        margin-top: 45px;
+                        margin-bottom: 20px;
+                        border-radius: 40px;
+                        outline: none !important;
+                        font-family: 'Poppins';
+                        font-weight: 500;
+                        color: $white;
+                        background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                        transition: all 0.3s ease 0s;
+                        &:hover {
+                            width: 225px;
+                            background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                        }
+                    }
+                    >a{
+                        >.btn-cadastro{
+                            width: 150px;
+                            height: 45px;//Arrumar pelo padding
+                            padding: 0 0;
+                            margin-top: 45px;
+                            border-radius: 40px;
+                            outline: none !important;
+                            border: none;
+                            background: 0 0;
+                            font-family: 'Poppins';
+                            font-weight: 500;
+                            color: $white;
+                            background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                            transition: all 0.3s ease 0s;
+                            &:hover {
+                                width: 225px;
+                                background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                        }
+                    }
+
+                    >.btn-gym{
+                        width: 150px;
+                        height: 45px;//Arrumar pelo padding
+                        padding: 0 0;
+                        margin-top: 45px;
+                        border-radius: 40px;
+                        outline: none !important;
+                        border: none;
+                        background: 0 0;
+                        font-family: 'Poppins';
+                        font-weight: 500;
+                        color: $white;
+                        background: linear-gradient(to left, rgba(149, 30, 247, 0.8),rgba(197, 99, 241, 0.8));
+                        transition: all 0.3s ease 0s;
+                        &:hover {
+                            width: 225px;
+                            background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                    }
+                }
+
+                    }
+            }  
         }
     }
 
