--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -25,8 +25,9 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	font-family: 'Segoe UI', sans-serif;
-  	font-size: 14px;
+	font-family: 'Poppins', sans-serif;
+	font-size: 14px;
+	overflow:hidden;
 }
 ol, ul {
 	list-style: none;
