--- a/src/scss/default-theme.scss
+++ b/src/scss/default-theme.scss
@@ -5,14 +5,11 @@
 
 
 .body-login{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    font-family: 'Poppins', sans-serif;
+    display: grid;
+    grid-template-columns: 65% 35%;
     >.login-leftside{
-        display: flex;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         >.login-img{
             width: 100%;
             height: 100%;
@@ -27,133 +24,129 @@
         }
     }
     >.login-rightside{
-        width: 65%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
         z-index: 2;
         background-color: $white;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+
+        // align-items: flex-start;
         border-radius: 2px;
         >.login-card{
-            width: 75%;
+            width: 100%;
             height: 100%;
-            margin-top: 65px;
-            margin-left: 55px;
-            margin-bottom: 40px;
-            // align-content: center;
-            // justify-content: center;
+
+            // margin-top: 65px;
+            // margin-left: 55px;
+            // margin-bottom: 40px;
             >.login-title{
-                font-size: 2.5em;
-                line-height: 1.5;
-                color: #333;
-                font-weight: 700;
+            //     font-weight: 700;
+            //     // font-size: 2.5em;
+            //     // line-height: 1.5;
+            //     color: #333; //Adicionar variável para cor
             }
             >.login-email{
-                width: 80%;
-                margin-top: 15%;
-                display: flex;
-                flex-direction: column;
-                >.login-email-subtitle{
-                    font-size: 1.5em;
-                    margin-bottom: 6.5%;
-                }
-                >.input{
-                    border: none;
-                    color: #ccc;
-                    width: 100%;
-                    height: 25px;
-                    font-size: 20px;
-                    border-bottom: 2px solid #dbdbdb;
-                }
+            //     // width: 80%;
+                display: block;
+            //     // margin-top: 15%;
+            //     >.login-email-subtitle{
+            //         // margin-bottom: 6.5%;
+            //         font-size: 1.5em;
+            //     }
+            //     >.login-email-field{
+            //         // width: 100%;
+            //         // height: 25px;
+            //         border: none;
+            //         color: #ccc; //Adicionar variável para cor
+            //         // font-size: 20px;//Deixar em EM
+            //         // border-bottom: 2px solid #dbdbdb;
+            //     }
             }
             >.login-password{
-                width: 80%;
-                margin-top: 15%;
-                display: flex;
-                flex-direction: column;
+                // width: 80%;
+                // margin-top: 15%;
+                display: block;
                 >.login-password-subtitle{
-                    font-size: 1.5em;
-                    margin-bottom: 6.5%;
+                    // font-size: 1.5em;
+                    // margin-bottom: 6.5%;
                 }
-                >.input{
-                    border: none;
-                    color: #ccc;
-                    width: 100%;
-                    height: 25px;
-                    font-size: 20px;
-                    border-bottom: 2px solid #dbdbdb;
+                >.login-password-field{
+                //     // width: 100%;
+                //     // height: 25px;
+                //     border: none;
+                //     color: #ccc;
+                //     font-size: 20px;// Deixar em EM
+                //     border-bottom: 2px solid #dbdbdb;
                 }
                 >.forgot-password-login{
-                    align-self: flex-end;
-                    font-size: .9em;
-                    margin-top: 2.5%;
+                //     // margin-top: 2.5%;
+                //     // align-self: flex-end;
+                //     font-size: .9em;
                 }
             }
             >.login-wrapper-btn{
-                width: 95%;
+                // width: 95%;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                // justify-content: space-between;
                     >.btn-login{
-                        width: 150px;
-                        height: 45px;
-                        padding: 0 25px;
+                    //     // width: 150px;
+                    //     // height: 45px;
+                    //     // padding: 0 25px;
                         margin-top: 45px;
                         margin-bottom: 20px;
-                        border-radius: 40px;
-                        outline: none !important;
-                        font-family: 'Poppins';
-                        font-weight: 500;
-                        color: $white;
-                        background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
-                        transition: all 0.3s ease 0s;
-                        &:hover {
-                            width: 225px;
-                            background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
-                        }
+                    //     border-radius: 40px;
+                    //     outline: none !important;
+                    //     font-family: 'Poppins';
+                    //     font-weight: 500;
+                    //     color: $white;
+                    //     background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                    //     transition: all 0.3s ease 0s;
+                    //     &:hover {
+                    //         width: 225px;
+                    //         background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                    //     }
                     }
-                    >a{
-                        >.btn-cadastro{
-                            width: 150px;
-                            height: 45px;//Arrumar pelo padding
-                            padding: 0 0;
-                            border-radius: 40px;
-                            outline: none !important;
-                            border: none;
-                            background: 0 0;
-                            font-family: 'Poppins';
-                            font-weight: 500;
-                            color: $white;
-                            background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
-                            transition: all 0.3s ease 0s;
-                            &:hover {
-                                width: 225px;
-                                background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
-                        }
+                    >.btn-cadastro{
+                    //     // width: 150px;
+                    //     // height: 45px;//Arrumar pelo padding
+                    //     // padding: 0 0;
+                    //     border-radius: 40px;
+                    //     outline: none !important;
+                    //     border: none;
+                        margin-top: 45px;
+                        margin-bottom: 20px;
+                    //     background: 0 0;
+                    //     font-family: 'Poppins';
+                    //     font-weight: 500;
+                    //     color: $white;
+                    //     background: linear-gradient(to left, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                    //     transition: all 0.3s ease 0s;
+                    //     &:hover {
+                    //         width: 225px;
+                    //         background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
+                        // }
                     }
-
-                    >.btn-gym{
-                        width: 150px;
-                        height: 45px;//Arrumar pelo padding
-                        padding: 0 0;
-                        margin-top: 20px;
-                        border-radius: 40px;
-                        outline: none !important;
-                        border: none;
-                        background: 0 0;
-                        font-family: 'Poppins';
-                        font-weight: 500;
-                        color: $white;
-                        background: linear-gradient(to left, rgba(149, 30, 247, 0.8),rgba(197, 99, 241, 0.8));
-                        transition: all 0.3s ease 0s;
-                        &:hover {
-                            width: 225px;
-                            background: linear-gradient(to left, rgba(125, 84, 158, 0.8),rgb(195, 124, 228));
-                    }
+                    >.btn-to-gym{
+                //         // width: 150px;
+                //         // height: 45px;//Arrumar pelo padding
+                //         // padding: 0 0;
+                //         // margin-top: 20px;
+                //         border-radius: 40px;
+                //         outline: none !important;
+                //         border: none;
+                        margin-top: 45px;
+                        margin-bottom: 20px;
+                //         background: 0 0;
+                //         font-family: 'Poppins';
+                //         font-weight: 500;
+                //         color: $white;
+                //         background: linear-gradient(to left, rgba(149, 30, 247, 0.8),rgba(197, 99, 241, 0.8));
+                //         transition: all 0.3s ease 0s;
+                //         &:hover {
+                //             width: 225px;
+                //             background: linear-gradient(to left, rgba(125, 84, 158, 0.8),rgb(195, 124, 228));
+                //     }
                 }
-
-                    }
             }  
         }
     }
@@ -260,9 +253,7 @@
             >.cadastro-wrapper-btn{
                 width: 95%;
                 display: flex;
-                justify-content: space-between;
-                >a{
-                                                                                                    
+                justify-content: space-between;                                                                          
                     >.btn-login{
                         width: 150px;
                         height: 45px;
@@ -281,7 +272,6 @@
                             width: 215px;
                             background: linear-gradient(to right, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
                         }
-                    }
                 }
                     >.btn-cadastro{
                         width: 150px;
