--- a/src/scss/default-theme.scss
+++ b/src/scss/default-theme.scss
@@ -4,6 +4,33 @@
 
 
 
+.header-main {
+  border-bottom: 2px solid red;
+  width: 100%;
+  height: 10px;
+
+  > .header-estilo {
+    width: 100%;
+    height: 10px;
+  }
+  > .cabecalio-usu {
+    width: 26%;
+    height: 10px;
+    float: left;
+    background-color: red;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
 .body-login{
     display: grid;
     grid-template-columns: 60% 35%;
