--- a/src/scss/default-theme.scss
+++ b/src/scss/default-theme.scss
@@ -6,21 +6,20 @@
 .cabecalio-mainPage{
 
     width: 100%;
-    height: 65px;
+    height: 8vh;
     display: grid;
     grid-template-columns: 25% 50% 25%;
 
     border-bottom: 2px solid rgba(195, 160, 216, 0.651);
-    background-color: rgba(243, 198, 223, 0.651);
+    background-color: rgb(51, 49, 49);
     >.cab-logo-academia{
-        width: 100%;
-        height: 100%;
-        background-color: rgba(197, 99, 241, 0.651);
+        margin-left: 15%;
+
         >.img-logo-main-page{
-            height: 25%;
-            width: 25%;
-            margin-top: 20px;        
-            margin-left: 30%;
+            max-width:60px;
+            height: auto;
+            width: auto;
+            margin-top: 5px;        
 
             &:hover{
                 transform: scale(1.1);
@@ -31,27 +30,28 @@
     }
 
     >.cab-aba-central{
-        height: 25%;
-        width: 25%;
-        margin-top: 20px;        
-        margin-left: 30%;
-        text-align: center;
+        align-self: center;
+        justify-self: center;
+        font-size: 27px;
+        font-weight: 543;
+        >.cab-font-outra-cor{
+            color: rgb(126, 228, 126);
+        }
+        
     }
 
     >.cab-usu-mainPage{
-        width:100%;
-        height: 100%;
-        display: block;
+        margin-right: 13%;
+        justify-content: center;
+
         >.img-usu-main-page{
-            height: 30px; 
-            width: 30px;
-            margin-top: 17px;
-            // margin-left: 6px;
+            max-width:45px;
             float: right;
+            height: auto;
+            width: auto;
+            margin-top: 10px;  
             border: 1px solid red;
-            border-radius: 100px;  
-            padding: 1px; 
-            margin-right: 6px;
+            border-radius: 100px;
             &:hover{
                 transform: scale(1.1);
                 transition: 0.5s;
@@ -76,6 +76,7 @@
         height: 100%;
         background: linear-gradient( to bottom, rgba(177, 115, 212, .8),rgba(193, 75, 140, .8));
     }
+    
 }
 
 
